# mini_cAR_server

./: .gitignore  Dockerfile  README.md  config.py  create_table.py  pyproject.toml  stresstest.py  test.py  testjpgBin
base/: singleton.py
infrastructure/repository/: base.py  model.py  s3.py  schemas.py
interface/router/: auth.py  car.py  gallery.py  stream.py  streams.py  user.py
interface/socket/: server.py
server/: app.py
