[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["twinszs <dongwoo5271@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
server = "server.app:main"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
numpy = "^1.23.4"
jwt = "^1.3.1"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
