[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["twinszs <dongwoo5271@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
server = "server.app:main"

[tool.poe.tasks]
makedb = "python create_table.py"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
numpy = "^1.23.4"
jwt = "^1.3.1"
bcrypt = "^4.0.1"
pydantic = "^1.10.2"
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.4.44"
PyJWT = "^2.6.0"
python-multipart = "^0.0.5"
websockets = "^10.4"
boto3 = "^1.26.13"

[tool.poetry.dev-dependencies]
poethepoet = "^0.16.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
